descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 202X-XX-XX  Release 7.XX.X                                     ---
----------------------------------------------------------------------

* added Utah RLE image reading and writing to libicv - Cliff Yapp
* added "standardize" option to GED attr command - Cliff Yapp
* added -L option to dbconcat for lazy prefix/suffix use - Cliff Yapp


----------------------------------------------------------------------
--- 2024-03-18  Release 7.38.2                                     ---
----------------------------------------------------------------------

* added "rtsurf" exterior surface area tool prototype - Sean Morrison
* updated sqlite3 to version 3.45.1 - Cliff Yapp
* updated libpng to version 1.6.43 - Cliff Yapp
* updated zlib to version 1.3.1 - Cliff Yapp
* updated and corrected dbconcat man page - Cliff Yapp
* improved ambient occlusion rt during -k cut planes - Sean Morrison
* changed rt ambient occlusion randomization default - Sean Morrison
* added ambient occlusion example to rt manual pages - Sean Morrison
* fixed rtweight output display inside MGED - Chris McGregor
* added shipping container example geometry model - Josh Baker
* added traffic light example geometry model - Chris McGregor
* improved rtwizard command-line option reporting - Sean Morrison
* added self-intersecting torus ray tracing support - Sean Morrison
* fixed rt crash rendering to -F/dev/null - Sean Morrison
* added mater man page density table example - Chris McGregor
* adjusted default ghosting intensity in rtwizard - Josh Baker
* fixed MGED command line handling of objects named 'y' - Cliff Yapp
* fix double printing of last 'search -exec' result - Chris McGregor
* improve 'search -v' to support multiple levels - Chris McGregor